force-app/main/default/objects/CRM_Retail_New_Lead__c/CRM_Retail_New_Lead__c.object-meta.xml
<CustomObject>
    <label>CRM Retail New Lead</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRM Retail New Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>