force-app/main/default/objects/CRM_Retail_New_Lead__c/fields/Assign_Sales_Executive__c.field-meta.xml
<CustomField>
    <fullName>Assign_Sales_Executive__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assign Sales Executive</label>
    <referenceTo>Retail_Employee__c</referenceTo>
    <relationshipLabel>CRM Retail New Leads</relationshipLabel>
    <relationshipName>CRM_Retail_New_Leads</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>