force-app/main/default/objects/CRM_Retail_New_Lead__c/fields/Complaint_Reason__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Reason__c</fullName>
    <label>Complaint Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>