force-app/main/default/objects/CRM_Retail_New_Lead__c/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <displayFormat>L-{0000}</displayFormat>
    <label>Lead ID</label>
    <type>AutoNumber</type>
</CustomField>