force-app/main/default/objects/CRM_Retail_New_Lead__c/fields/Marketing_Source__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Source__c</fullName>
    <label>Marketing Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Youtube</fullName>
            </value>
            <value>
                <fullName>TVC - ABP Mazha</fullName>
            </value>
            <value>
                <fullName>TVC - Zee24 Taas</fullName>
            </value>
            <value>
                <fullName>TVC - TV9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>