force-app/main/default/objects/CRM_Retail_New_Lead__c/fields/Mode_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Communication__c</fullName>
    <label>Mode of Communication</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Toll-free number</fullName>
            </value>
            <value>
                <fullName>Shopify Email</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>