force-app/main/default/objects/CRM_Retail_New_Lead__c/fields/Needs_sales_team_followup__c.field-meta.xml
<CustomField>
    <fullName>Needs_sales_team_followup__c</fullName>
    <label>Needs sales team followup?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>