force-app/main/default/objects/CRM_Retail_New_Lead__c/fields/New_Lead__c.field-meta.xml
<CustomField>
    <fullName>New_Lead__c</fullName>
    <label>New Lead?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Prospective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>