force-app/main/default/objects/CRM_Retail_New_Lead__c/fields/Reason_for_Dead_Lead__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Dead_Lead__c</fullName>
    <label>Reason for Dead Lead</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>