force-app/main/default/objects/CRM_Retail_New_Lead__c/fields/Reason_for_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Inquiry__c</fullName>
    <label>Reason for Inquiry</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealership</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Order Status Check</fullName>
            </value>
            <value>
                <fullName>Product Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>