force-app/main/default/objects/CRM_Retail_New_Lead__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forwarded to Sales Team</fullName>
            </value>
            <value>
                <fullName>Contacted by Sales Team</fullName>
            </value>
            <value>
                <fullName>Converted to Custome</fullName>
            </value>
            <value>
                <fullName>Dead Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>