force-app/main/default/objects/CRM_Retail_New_Lead__c/fields/Taluka__c.field-meta.xml
<CustomField>
    <fullName>Taluka__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Taluka</label>
    <referenceTo>Retail_Taluka__c</referenceTo>
    <relationshipLabel>CRM Retail New Leads</relationshipLabel>
    <relationshipName>CRM_Retail_New_Leads</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>