force-app/main/default/objects/CRM_Retail_New_Lead__c/fields/Type_of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Customer__c</fullName>
    <label>Type of Customer</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Farmer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>